ARToolKit ChangeLog.
====================


Changes in version 2.72 (this release) (2006-XX-XX).
------------------------------------------------------
- All platforms: ARToolKit now supports querying of SDK and runtime versions.
- All platforms: Support for AR_PIXEL_FORMAT_MONO is now included.
- Mac OS X: Fix for an error in the VRML library inclusion on Mac OS X.
- Mac OS X: Now detects if running emulated on Intel Macs, and optimises video for this case.
- Mac OS X: Two new video config tokens are now available; -fliph and -flipv, which will mirror the video image horizontally and vertically respectively.
- Linux: Support for gstreamer video capture added, thanks to Hartmut Seichter.
- Linux 1394 DC: Major changes to add PointGray DragonFly support, add LGPL/GPL license info, better config string support, stabilised interfaces, lots of clean ups to make the code easier to work with
- Linux DV: Fix for bugs when using PAL in videoLinuxDV as reported at http://www.hitlabnz.org/forum/showthread.php?t=412.


Changes in version 2.71.3 (2006-06-19).
---------------------------------------
- This release supports Mac OS X on Intel, and builds Universal binaries, with the exception of the VRML projects (since OpenVRML does not yet build on Mac OS X i386).
- Fixed line endings in MS Visual Studio 6 project files calib_distortion.dsp and calib_camera2.dsp.
- Fix for a bug in VideoLinuxDV identified by Simon Goodall, where video stream could be incorrectly closed twice (SF 1452403).
- The Win32 video library now accepts in the config string either the pathname of an XML file, or raw XML. The string is treated as raw XML if the  first 5 characters are "<?xml".
- The Mac OS X video library won't return a copy of the acquired image if running on an Intel Mac. This is a workaround for a driver issue. It may cause problems and a more robust solution is coming.
- Fixed a bug in pattern extraction which occured when AR_PATTERN_SIZE_X and AR_PATTERN_SIZE_Y were not equal.